--- a/contact-us.html
+++ b/contact-us.html
@@ -101,7 +101,7 @@
             </li>
             <li><a class="app-menu__item" href="share.html"><i class="app-menu__icon fa fa-share-alt"></i><span
                         class="app-menu__label">Share with Friends</span></a></li>
-            <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-sign-out"></i><span
+            <li><a class="app-menu__item" href="#" onclick="signOut()"><i class="app-menu__icon fa fa-sign-out"></i><span
                         class="app-menu__label">Logout</span></a></li>
         </ul>
     </aside>
