--- a/home.html
+++ b/home.html
@@ -103,54 +103,11 @@
         margin-right: -13px;" class="d-flex justify-content-center align-items-center">
             <img src="./assets/images/google-ads.png" alt="">
         </div>
-        <div class="d-flex justify-content-around mt-2">
-            <div class="d-flex justify-content-end flex-column ">
-                <h6 id="ongoing_tab" class="active_tab_dashboard" onclick="updateTab('ongoing');">ONGOING</h6>
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <img src="assets/images/dashboard_coin.webp" style="height: 60px;width: 80px;" alt="">
-            </div>
-            <div class="d-flex justify-content-end flex-column ">
-                <h6 id="upcoming_tab" onclick="updateTab('upcoming');">UPCOMING</h6>
-            </div>
-        </div>
         <div class="home_page_main_container">
             <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')"
-                        class="game_card_play_btn" alt="Game play">
-                    <h4>Game Name</h4>
-                    <small><b>XXX - XX - XXX</b></small>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small class="text-danger">5 hrs 40 min left</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
-                </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
-                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn"
-                        alt="Game play">
-                    <h4>Game Name</h4>
-                    <small><b>123 - 45 - 123</b></small>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
-                </div>
-
-            </div>
-            <div id="upcoming_tab_content" class="d-none">
-                <div class="ongoing_card upcoming_card">
-                    <img src="./assets/shapes/upcomingRectangle.svg" class="game_card_label" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <p><img src="./assets/shapes/setReminder.svg" />Set Reminder</p>
-                    <div>
-                        <small>Open time - 2:30 PM</small>
-                        <small>Close time- 3:00 PM</small>
-                    </div>
-                </div>
+                <!-- 
+                
+                 -->
             </div>
         </div>
     </main>
@@ -169,6 +126,45 @@
             axiosInstance.get('home').then((response) => {
                 endLoader()
                 if (response.status === 200) {
+                    let gameList = response.data.game_list
+                    let ongoingTabContent = document.getElementById('ongoing_tab_content')
+                    for (let i = 0; i < gameList.length; i++) {
+                        switch (gameList[i].status) {
+                            case 'open':
+                                let timeRemain = calculateTimeRemain(gameList[i]?.market_closetime)
+                                ongoingTabContent.innerHTML = ongoingTabContent.innerHTML +
+                                    `<div class="ongoing_card">` +
+                                    `<img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">` +
+                                    `<img src="./assets/shapes/gameplaybtn.png" onclick="navigate('game.html')" class="game_card_play_btn" alt="Game play">` +
+                                    `<h4>${gameList[i]?.market_fullname}</h4>` +
+                                    `<small><b>${gameList[i]?.result}</b></small><div>` +
+                                    ` <small>Open time - ${convertTime(gameList[i]?.market_opentime)}</small>` +
+                                    ` <small class="text-danger">${timeRemain} left</small>` +
+                                    `<small >Close time - ${convertTime(gameList[i]?.market_closetime)}</small></div></div>`
+                                break;
+                            case 'close':
+                                ongoingTabContent.innerHTML = ongoingTabContent.innerHTML +
+                                    `<div class="ongoing_card">` +
+                                    `<img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">` +
+                                    `<img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn" alt="Game play">` +
+                                    `<h4>${gameList[i]?.market_fullname}</h4>` +
+                                    ` <small><b>${gameList[i]?.result}</small><div>` +
+                                    ` <small>Open time - ${convertTime(gameList[i]?.market_opentime)}</small>` +
+                                    ` <small>Close time- ${convertTime(gameList[i]?.market_closetime)}</small></div>  </div>`
+                                break;
+                            case 'upcoming':
+                                ongoingTabContent.innerHTML = ongoingTabContent.innerHTML +
+                                    `<div class="ongoing_card upcoming_card">` +
+                                    `  <img src="./assets/shapes/upcomingRectangle.svg" class="game_card_label" alt="Ongoing card">` +
+                                    ` <h4>${gameList[i]?.market_fullname}</h4>` +
+                                    ` <p><img src="./assets/shapes/setReminder.svg" />Set Reminder</p><div>` +
+                                    ` <small>Open time - ${convertTime(gameList[i]?.market_opentime)}</small>` +
+                                    ` <small>Close time- ${convertTime(gameList[i]?.market_closetime)}</small> </div></div>`
+                                break;
+                            default:
+                                break;
+                        }
+                    }
                 } else {
                     $.notify({
                         title: "",
@@ -190,26 +186,6 @@
                     type: "danger"
                 });
             })
-        }
-    </script>
-    <!-- control tab click -->
-    <script>
-        function updateTab(type) {
-            let ongoing_tab = document.getElementById('ongoing_tab')
-            let upcoming_tab = document.getElementById('upcoming_tab')
-            let ongoing_tab_content = document.getElementById('ongoing_tab_content');
-            let upcoming_tab_content = document.getElementById('upcoming_tab_content')
-            if (type == 'ongoing') {
-                ongoing_tab_content.className = 'd-flex justify-content-center flex-column'
-                upcoming_tab_content.className = 'd-none'
-                ongoing_tab.className = 'active_tab_dashboard'
-                upcoming_tab.className = ''
-            } else {
-                ongoing_tab_content.className = 'd-none'
-                upcoming_tab_content.className = 'd-flex justify-content-center flex-column'
-                ongoing_tab.className = ''
-                upcoming_tab.className = 'active_tab_dashboard'
-            }
         }
     </script>
 </body>
