--- a/profile.html
+++ b/profile.html
@@ -196,13 +196,13 @@
             let usernumber = document.getElementById('side_bar_usernumber_id')
             if (cookieData) {
                 username.innerText = cookieData?.name
-                usernumber.innerText = cookieData?.userName
+                usernumber.innerText = cookieData?.user_phonenumber
             }
             startLoader()
             if (cookieData) {
                 console.log(cookieData)
                 axiosInstance.get('profile_fetch', {
-                    'phone_number': cookieData?.userName
+                    'phone_number': cookieData?.user_phonenumber
                 }).then((response) => {
                     endLoader()
                     if (response.status === 200) {
