--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
         <div class="logo">
             <h1>Arena</h1>
         </div>
-        <div class="login-box" style="min-height: 450px;">
+        <div class="login-box" style="min-height: 520px;">
             <form class="login-form" style="padding-top: 20px;">
                 <div class="form-group">
                     <label class="control-label">Name</label>
@@ -43,6 +43,10 @@
                     <label class="control-label">Phone</label>
                     <input class="form-control" maxlength="10" id="signup_phone" type="text" placeholder="Phone"
                         autofocus oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Email</label>
+                    <input class="form-control" id="signup_email" type="email" placeholder="Email">
                 </div>
                 <div class="form-group">
                     <label class="control-label">Password</label>
@@ -83,19 +87,10 @@
             startLoader()
             let name = document.getElementById('signup_name').value
             let phone = document.getElementById('signup_phone').value
+            let email = document.getElementById('signup_email').value
             let password = document.getElementById('signup_password').value
             let c_password = document.getElementById('signup_c_password').value
-            if (password !== c_password || password === "") {
-                endLoader()
-                $.notify({
-                    title: "",
-                    message: `Password didn't match.`,
-                    icon: 'fa fa-times'
-                }, {
-                    type: "danger"
-                });
-                return
-            } else if (phone?.length < 10) {
+            if (phone?.length < 10) {
                 endLoader()
                 $.notify({
                     title: "",
@@ -105,37 +100,67 @@
                     type: "danger"
                 });
                 return
-            }
-            axiosInstance.post('signup',
-                {
-                    "full_name": name,
-                    "phone_number": phone,
-                    "password": password
-                }
-            ).then((response) => {
+            } else if (!validateEmail(email)) {
                 endLoader()
-                if (response.status === 200) {
-                    location.href = "index.html";
-                } else {
-                    $.notify({
-                        title: "",
-                        message: response.data?.msg,
-                        icon: 'fa fa-times'
-                    }, {
-                        type: "danger",
-                    });
-                }
-            }, (error) => {
-                endLoader()
-                console.log('error', error);
                 $.notify({
                     title: "",
-                    message: `Something went wrong! Please try again.`,
+                    message: `Invalid phone number.`,
                     icon: 'fa fa-times'
                 }, {
                     type: "danger"
                 });
-            })
+                return
+            } else if (password !== c_password || password === "") {
+                endLoader()
+                $.notify({
+                    title: "",
+                    message: `Password didn't match.`,
+                    icon: 'fa fa-times'
+                }, {
+                    type: "danger"
+                });
+                return
+            } else
+                axiosInstance.post('signup',
+                    {
+                        "full_name": name,
+                        "phone_number": phone,
+                        "password": password,
+                        "email": email
+                    }
+                ).then((response) => {
+                    endLoader()
+                    if (response.status === 200) {
+                        $.notify({
+                            title: "",
+                            message: response.data?.msg,
+                            icon: 'fa fa-check'
+                        }, {
+                            type: "success",
+                        });
+                        setTimeout(() => {
+                            location.href = "index.html";
+                        }, 2000);
+                    } else {
+                        $.notify({
+                            title: "",
+                            message: response.data?.msg,
+                            icon: 'fa fa-times'
+                        }, {
+                            type: "danger",
+                        });
+                    }
+                }, (error) => {
+                    endLoader()
+                    console.log('error', error);
+                    $.notify({
+                        title: "",
+                        message: `Something went wrong! Please try again.`,
+                        icon: 'fa fa-times'
+                    }, {
+                        type: "danger"
+                    });
+                })
         }
     </script>
 </body>
