--- a/signup.html
+++ b/signup.html
@@ -104,7 +104,7 @@
                 endLoader()
                 $.notify({
                     title: "",
-                    message: `Invalid phone number.`,
+                    message: `Invalid email format.`,
                     icon: 'fa fa-times'
                 }, {
                     type: "danger"
