--- a/bid.html
+++ b/bid.html
@@ -105,7 +105,7 @@
             <p><i class="fa fa-chevron-left"
                     onclick=" sessionStorage.removeItem('current_bid_type'); navigate('game.html')"
                     aria-hidden="true"></i><span id="current_bid_type_id"></span></p>
-            <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;3h : 20m : 37s</p>
+            <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;<span id="countdown_id">0h : 0m : 0s</span></p>
         </div>
         <script>
             var currentBidType = sessionStorage.getItem("current_bid_type");
@@ -187,8 +187,8 @@
                 for (let i = 0; i < bidList.length; i++) {
                     totalValue = totalValue + bidList[i].bidPoint
                     var row = bidTable.insertRow(i + 1);
-                    row.innerHTML = `<td class="text-center">${bidList[i].bidDigit}</td>
-                        <td class="text-center">${bidList[i].bidPoint}</td>
+                    row.innerHTML = `<td class="text-center">${bidList[i].number}</td>
+                        <td class="text-center">${bidList[i].points}</td>
                         <td class="text-center">${currentBidType}</td>
                         <td class="text-center"><i class="fa fa-trash text-danger" aria-hidden="true" onclick="removeBidItem(${i})"></i></td>`
                 }
@@ -260,10 +260,17 @@
                     });
                     return
                 }
+                let game_type = 'open'
+                let flexRadioDefault2 = document.getElementById('flexRadioDefault2').checked
+                if (flexRadioDefault2) {
+                    game_type = 'close'
+                }
                 bidList.push({
-                    bidDigit: parseInt(inputFieldDigit.value),
-                    bidPoint: parseInt(bidPointInput.value)
+                    number: parseInt(inputFieldDigit.value),
+                    points: parseInt(bidPointInput.value),
+                    game_type: game_type
                 })
+                console.log(bidList)
                 inputFieldDigit.value = ''
                 bidPointInput.value = ''
                 createBidTable()
@@ -271,9 +278,6 @@
             function removeBidItem(index) {
                 bidList.splice(index, 1)
                 createBidTable()
-            }
-            function handlePlay() {
-                console.log('handlePlay')
             }
         </script>
     </main>
@@ -292,9 +296,38 @@
             username.innerText = cookieData?.name
             usernumber.innerText = cookieData?.user_phonenumber
         }
-        window.onload = function () {
+        var todayDate = new Date();
+        let todayDay = todayDate.getDate();
+        let todayMonth = getDateInWord(todayDate.getMonth()+1)
+        let todayYear = todayDate.getFullYear()
+        var countDownDate = new Date(`${todayMonth} ${todayDay},${todayYear} ${gameDetails?.market_closetime}`).getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function () {
+            var now = new Date().getTime();
+            var distance = countDownDate - now;
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            document.getElementById("countdown_id").innerHTML = hours + "h : "
+                + minutes + "m : " + seconds + "s ";
+
+            // If the count down is over, write some text 
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("countdown_id").innerHTML = "0h : 0m : 0s";
+            }
+        }, 1000);
+        function handlePlay() {
             startLoader()
-            axios.get('/matkaApplicaton/backend/home/').then((response) => {
+            axiosInstance.post('save_bid', {
+                "game_name": currentBidType,
+                "market_id": gameDetails?.market_id,
+                "user_id": cookieData?.user_id,
+                "bid_lists": bidList
+
+            }).then((response) => {
                 endLoader()
                 if (response.status === 200) {
                 } else {
